# odin-core

./: .env  .env.example  .env.mcp.example  .gitignore  CHANGELOG.md  MANUAL_PUBLICATION_TEST.md  MCP.md  Makefile  README.md  ROADMAP.md  app_tree.txt  architecture.txt  architecture_report.txt  fix-and-rerun-ow004.sh  fix-backend-pyproject.sh  fix-ow-005b-brain-wiring.sh  fix-ow-005b-engineering-default-root.sh  fix-ow-005b-engineering-service.sh  fix-ow-005b-patch-default-root.sh  fix-ow-005b-render-service-v2.sh  fix-ow-005b-render-service.sh  fix-ow004-eslint.sh  install-ow-005b.sh  odin_mcp_write_test.txt  ow-001-odin-web-foundation.sh  ow-002-application-shell-v2.sh  ow-002-application-shell.sh  ow-003-identity-secure-access.sh  ow-004-runtime-dashboard.sh  ow-004-runtime-dashboard.sh.bak-20260720-224457  ow-005a-production-website-fix.sh  render-mcp.yaml  test_tree.txt
backend/: .env.example  Makefile  branches.py  pyproject.toml  pyproject.toml.backup-20260720-224332  requirements.txt
backend/app/: main.py  mcp_server.py
backend/app/agents/: __init__.py  builtins.py  config.py  exceptions.py  manager.py  models.py  orchestrator.py  (+5 more)
backend/backups/: github.py.bak
backend/odin_auth/: __init__.py  config.py  database.py  dependencies.py  models.py  router.py  security.py  service.py
backend/odin_shared/: __init__.py  sqlite_persistence.py
backend/scripts/: build_04a_03R_09_api_compat.sh  test_github.py
backend/tests/: test_autonomous_git.py  test_change_task_orchestration.py  test_change_tasks_auth.py  test_engineering_intelligence.py  test_github_consolidation.py  test_github_pull_request_gates.py  test_github_workflow_observability.py  test_github_write_safety.py  test_health.py  test_health_diagnostics.py  test_oic006_workspaces.py  test_ow003_auth.py  test_ow004_runtime_dashboard.py  test_planner_repository_intelligence.py  test_product.py  test_production_domains.py  test_repository_intelligence.py  test_runtime_dashboard_service.py  test_runtime_lifecycle.py  test_service_lifecycle.py  test_tool_platform.py  test_unified_persistence.py
(+655 files in other folders)
