[project]
name = "odin-core"
version = "0.1.0"
description = "Odin AI Software Engineering Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.139.2",
    "uvicorn>=0.51.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",

    "pwdlib[argon2]>=0.3.0",
    "PyJWT>=2.10.1",
    "cryptography>=49.0.0",

    "mcp[cli]>=1.28.1",
    "sse-starlette>=3.4.5",

    "psutil>=7.2.2",

    "GitPython>=3.1.46",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "httpx2>=2.7.0",

    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
